# mazurgab

./: .gitignore  README.md
CodeWars/CountingDupilcates/: CMakeLists.txt  main.cpp
CodeWars/Cubes/: CMakeLists.txt  main.cpp
CodeWars/Digits/: CMakeLists.txt  main.cpp
CodeWars/Passphrases/: CMakeLists.txt  main.cpp
CodeWars/Racing/: CMakeLists.txt  main.cpp
CodeWars/Rot13/: CMakeLists.txt  main.cpp
CodeWars/SnailSort/: CMakeLists.txt  main.cpp
CodeWars/Sudoku/: CMakeLists.txt  main.cpp
CodeWars/Triangle/: CMakeLists.txt  main.cpp
CodeWars/buildTower/: CMakeLists.txt  main.cpp
CodeWars/highAndLow/: CMakeLists.txt  main.cpp
CodeWars/isSquare/: CMakeLists.txt  main.cpp
CodeWars/supermarketQueue/: CMakeLists.txt  main.cpp
Demos/: Second demo.pptx
week-01/day-02/AnimalsAndLegs/: CMakeLists.txt  main.cpp
week-01/day-02/AvarageOfInput/: CMakeLists.txt  main.cpp
week-01/day-02/CodingHours/: CMakeLists.txt  main.cpp
week-01/day-02/Cuboid/: CMakeLists.txt  main.cpp
week-05/Box/: CMakeLists.txt  box.cpp  box.h  main.cpp
week-05/CountAs/: CMakeLists.txt  main.cpp
week-05/Pirates/: CMakeLists.txt  Pirate.cpp  Pirate.h  main.cpp
week-05/day-04/Anagram/anagram_test/: CMakeLists.txt  anagram_test.cpp
week-05/day-04/Sum/sum_test/: CMakeLists.txt  sum_test.cpp
week-05/seconds/: CMakeLists.txt  seconds.cpp
week-10/Bus/: CMakeLists.txt  bus.txt  main.c
week-10/Password_strength/: CMakeLists.txt  first.c  main.c
week-10/SC/: CMakeLists.txt  main.c
week-10/day-04/: main.c
week-10/untitled/: main.cpp
week-11/Closed_loop_control/: main.c
(+507 files in other folders)
